src/styles/main.css
/* ... */
.p1-gradient-color,
.single-services:hover .lnr {
  background: -moz-linear-gradient(0deg, #0378b8 0%, #62bdfc 100%);
  background: -webkit-linear-gradient(0deg, #0378b8 0%, #62bdfc 100%);
  background: -ms-linear-gradient(0deg, #0378b8 0%, #62bdfc 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
}

.primary-btn {
  background: #0378b8;
  background: -webkit-linear-gradient(0deg, #0378b8 0%, #62bdfc 100%);
  line-height: 42px;
  padding-left: 30px;
  padding-right: 30px;
  border: none;
  color: #fff;
  display: inline-block;
  font-weight: 500;
  position: relative;
  -webkit-transition: all 0.3s ease 0s;
  -moz-transition: all 0.3s ease 0s;
  -o-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
  cursor: pointer;
  position: relative;
}


.primary-btn:focus {
  outline: none;
}

.primary-btn span {
  color: #fff;
  position: absolute;
  top: 50%;
  transform: translateY(-60%);
  right: 30px;
  -webkit-transition: all 0.3s ease 0s;
  -moz-transition: all 0.3s ease 0s;
  -o-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
}

.primary-btn:hover {
  color: #fff;
}

.primary-btn:hover span {
  color: #fff;
  right: 20px;
}

.primary-btn.white {
  border: 1px solid #fff;
  color: #fff;
}

.primary-btn.white span {
  color: #fff;
}

.primary-btn.white:hover {
  background: #fff;
  color: #0378b8;
}

.primary-btn.white:hover span {
  color: #0378b8;
}

.primary-btn.wh {
  background: #fff;
  color: #222;
  text-transform: uppercase;
}

.primary-btn.wh:hover {
  background: #222;
  color: #fff;
}

.primary-btn.squire {
  border-radius: 0px !important;
  border: 1px solid transparent;
}

.primary-btn.squire:hover {
  border: 1px solid #fff;
  background: transparent;
  color: #fff;
}

/* Boxed Button Style Starts */
.boxed-btn-02.blank {
  background-color: transparent;
  border: 2px solid #fff;
  color: #fff;
}

.boxed-btn-02 {
  background-color: #500ade;
  border: 2px solid transparent;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-size: 16px;
  font-weight: 500;
  height: auto;
  line-height: auto;
  padding: 8px 20px;
  text-align: center;
  text-transform: capitalize;
  transition: all .3s ease-in;
}

.boxed-btn-02.blank:hover {
  background-color: #fff;
  color: #000;
}

/* Boxed Button Style ends */

.overlay {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
}

.section-title {
  text-align: center;
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 80px;
}

.section-title h1 {
  margin-bottom: 10px;
}

/*-------- Start Banner Area ------------*/
.banner-area {
  background: #f5f5fe;
  padding: 100px 0px 40px;
}

.homepage-banner-area {
  background: linear-gradient(40deg, #93fe37, #56951f);
  padding: 0px 0px 50px 0px;
}

.banner-area .fullscreen {
  height: 750px !important;
}

.banner-left h6 {
  text-transform: uppercase;
  font-weight: 400;
  letter-spacing: 2px;
}

.banner-left h1 {
  margin: 20px 0;
  font-size: 60px;
  text-transform: uppercase;
}

@media (max-width: 991px) {
  .banner-left h1 {
    font-size: 30px;
  }

  .banner-area {
    padding: 10px 0px;
  }
}

.banner-left .primary-btn:hover {
  box-shadow: 0px 20px 20px 0px rgba(132, 144, 255, 0.3);
}

@media (max-width: 767px) {
  .banner-area {
    padding: 0px 0px 50px;
  }

  .banner-left {
    text-align: center;
    margin-top: 0px;
    order: 2;
  }
}

.banner-right {
  text-align: center;
  max-width: 60.66667%
}

@media (max-width: 991px) {
  .banner-right {
    align-self: center !important;
  }
}

@media (max-width: 767px) {
  .banner-right {
    max-width: 500px;
    margin-top: 80px;
    margin-left: auto;
    margin-right: auto;
    display: block;
    order: 1;
  }
}


/*-------- End Banner Area ------------*/
/*-------- Start home-about Area ------------*/
@media (max-width: 767px) {
  .home-about-right {
    margin-top: 30px;
  }
}

.home-about-right h6 {
  margin-bottom: 30px;
  text-transform: uppercase;
  font-weight: 400;
}

.home-about-right h1 {
  margin-bottom: 40px;
}

@media (max-width: 991px) {
  .home-about-right h1 {
    font-size: 20px;
  }
}

.home-about-right p {
  margin-bottom: 30px;
  /* max-width: 445px; */
}

.home-about-right .primary-btn:hover {
  box-shadow: 0px 20px 20px 0px rgba(132, 144, 255, 0.3);
}

/*-------- End home-about Area ------------*/
/*--------- Start Services Area -------------*/
.single-services {
  text-align: center;
  margin-top: 60px;
}

.single-services .lnr {
  font-size: 35px;
  color: #222;
  -webkit-transition: all 0.3s ease 0s;
  -moz-transition: all 0.3s ease 0s;
  -o-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
}

.single-services h4 {
  margin-top: 30px;
  margin-bottom: 20px;
  -webkit-transition: all 0.3s ease 0s;
  -moz-transition: all 0.3s ease 0s;
  -o-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
}

.single-services p {
  max-width: 318px;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.single-services:hover h4 {
  color: #0378b8;
}

/*--------- End Services Area -------------*/
/*--------- Start Facts Area -------------*/
.single-fact {
  text-align: center;
}

.single-fact h1,
.single-fact p {
  color: #fff;
}

.single-fact h1 {
  font-weight: 700;
}

@media (max-width: 800px) {
  .single-fact {
    margin-bottom: 30px;
  }
}

/*--------- End Facts Area -------------*/
/*--------- Start Portfolio Area -------------*/
.portfolio-area .primary-btn {
  color: #fff;
  background-color: #8490ff;
  margin-left: auto;
  margin-right: auto;
}

.portfolio-area .filters {
  text-align: center;
}

.portfolio-area .filters ul {
  padding: 0;
}
/* ... */

